Fixed style editor updates logic.

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -89,7 +89,7 @@
 
             <div class="col">
                 <article>
-                    <div class="style-card" data-bind="styleable: globals.p.default">
+                    <div class="style-card" data-bind="styleable: 'globals/p/default'">
                         <div class="style-card-body">
                             <p data-bind="stylePreview: 'globals/p/default'">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
