Background blend mode option (#15)

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -120,4 +120,30 @@
             data-bind="checked: attachment, event: { change: applyChanges }" />Local
     </label>
 </div>
+
+<div class="form-group">
+    <label class="form-label" for="blend">
+        Background blend mode
+    </label>
+    <div class="input-group">
+        <select id="blend" class="form-control"  data-bind="value: blend">
+            <option value="normal">Normal</option>
+            <option value="multiply">Multiply</option>
+            <option value="screen">Screen</option>
+            <option value="overlay">Overlay</option>
+            <option value="darken">Darken</option>
+            <option value="lighten">Lighten</option>
+            <option value="color-dodge">Color dodge</option>
+            <option value="color-burn">Color burn</option>
+            <option value="hard-light">Hard light</option>
+            <option value="soft-light">Soft light</option>
+            <option value="difference">Difference</option>
+            <option value="exclusion">Exclusion</option>
+            <option value="hue">Hue</option>
+            <option value="saturation">Saturation</option>
+            <option value="color">Color</option>
+            <option value="luminosity">Luminosity</option>
+        </select>
+    </div>
+</div>
 <!-- /ko -->
