Forbidding sub-component delete commands. Fixed element IDs.

--- a/src/workshops/transitions/transition.html
+++ b/src/workshops/transitions/transition.html
@@ -1,6 +1,6 @@
 <div class="form-group">
-    <label for="textDecoration">Timing function</label>
-    <select id="textDecoration" class="form-control"
+    <label for="timingFunction">Timing function</label>
+    <select id="timingFunction" class="form-control"
         data-bind="options: timingFunctionOptions, optionsValue: 'value', optionsText: 'text', value: $component.timingFunction"></select>
 </div>
 
