--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -9,21 +9,17 @@
     </div>
 </div>
 
-<div class="flex flex-column flex-item flex-item-grow fonts" role="listbox"
-    data-bind="scrollable: { onEndReach: $component.loadNextPage }" aria-live="polite">
+<div class="flex flex-column flex-item flex-item-grow fonts" role="listbox" data-bind="scrollable: { onEndReach: $component.loadNextPage }, listbox: {}">
     <!-- ko foreach: { data: fonts, as: 'font' } -->
-    <div class="list-item font-box"
-        data-bind="css: { selected: font === $component.selectedFont() }, scrolledIntoView: { onInView: font.loadPreview }">
+    <div role="option" class="list-item font-box" data-bind="activate: $component.selectFont, scrolledIntoView: { onInView: font.loadPreview }">
         <style data-bind="jss: preview"></style>
-        <a href="#" role="option" class="font"
-            data-bind="click: $component.selectFont, text: font.family, style: { 'font-family': font.family }">
-        </a>
+        <div class="font" data-bind="text: font.family, style: { 'font-family': font.family }"></div>
     </div>
     <!--/ko -->
 </div>
 
 <div class="flex-item btn-group">
-    <button class="btn btn-default" data-bind="click: uploadFont">
+    <button class="btn btn-default" data-bind="activate: uploadFont">
         <i aria-hidden="true" class="paperbits-icon paperbits-square-upload"></i>
         Upload font
     </button>
