Fixed style cancelling gestures.

--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -3,7 +3,7 @@
     <hr />
 
     <div class="flex flex-column flex-item flex-item-grow" role="listbox" data-bind="scrollable: true, listbox: {}">
-        <a role="option" class="list-item" title="Clear shadow" data-bind="activate: $component.clearShadow, focus: true">
+        <a role="option" class="list-item" title="Clear shadow" data-bind="activate: $component.clearShadow">
             <span class="list-item-label"> (Inherit) </span>
         </a>
         
