--- a/src/workshops/size/sizeEditor.html
+++ b/src/workshops/size/sizeEditor.html
@@ -1,66 +1,60 @@
 <!-- ko if: widthEnabled -->
 <div class="form-group">
     <label for="itemWidth" class="form-label">
-        Width (px)
+        Width
         <button class="btn btn-info" type="button" aria-label="Container width"
             data-bind="tooltip: 'Set container width. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="itemWidth" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: itemWidth" />
+    <size-input params="{ id: 'itemWidth', size: itemWidth, allowUnits: $component.allowUnits }"></size-input>
 </div>
 <!-- /ko -->
 
 <!-- ko if: heightEnabled -->
 <div class="form-group">
     <label for="itemHeight" class="form-label">
-        Height (px)
+        Height
         <button class="btn btn-info" type="button" aria-label="Container height"
             data-bind="tooltip: 'Set container height. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="itemHeight" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: itemHeight" />
+    <size-input params="{ id: 'itemHeight', size: itemHeight, allowUnits: $component.allowUnits }"></size-input>
 </div>
 <!-- /ko -->
 
 <!-- ko if: minMaxWidthEnabled -->
 <div class="form-group">
     <label for="minWidth" class="form-label">
-        Min width (px)
+        Min width
         <button class="btn btn-info" type="button" aria-label="Min container width"
             data-bind="tooltip: 'Set minimum width. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="minWidth" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: minWidth" />
+    <size-input params="{ id: 'minWidth', size: minWidth }"></size-input>
 </div>
 <div class="form-group">
     <label for="maxWidth" class="form-label">
-        Max width (px)
+        Max width
         <button class="btn btn-info" type="button" aria-label="Max container width"
             data-bind="tooltip: 'Set maximum container width. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="maxWidth" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: maxWidth" />
+    <size-input params="{ id: 'maxWidth', size: maxWidth }"></size-input>
 </div>
 <!-- /ko -->
 
 <!-- ko if: minMaxHeightEnabled -->
 <div class="form-group">
     <label for="minHeight" class="form-label">
-        Min height (px)
+        Min height
         <button class="btn btn-info" type="button" aria-label="Min container height"
             data-bind="tooltip: 'Set minimum container height. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="minHeight" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: minHeight" />
+    <size-input params="{ id: 'minHeight', size: minHeight }"></size-input>
 </div>
 <div class="form-group">
     <label for="maxHeight" class="form-label">
-        Max height (px)
+        Max height
         <button class="btn btn-info" type="button" aria-label="Max container height"
             data-bind="tooltip: 'Set maximum container height. Depending on the viewport, this value can be different following the mobile-first approach. If not specified in the current viewport, the value inherits from closest smaller viewports.'"></button>
     </label>
-    <input type="number" min="0" id="maxHeight" class="form-control" placeholder="(Not set)"
-        data-bind="textInput: maxHeight" />
+    <size-input params="{ id: 'maxHeight', size: maxHeight }"></size-input>
 </div>
 <!-- /ko -->
 
