--- a/src/workshops/fonts/fontEditor.html
+++ b/src/workshops/fonts/fontEditor.html
@@ -1,6 +1,6 @@
 <style data-bind="jss: preview"></style>
 
-<div class="form flex flex-column" data-bind="scrollable: {}">
+<div class="form flex flex-column" data-bind="scrollable: true">
     <div class="form-group">
         <label for="styleName">Font name</label>
         <input id="styleName" type="text" class="form-control" spellcheck="false"
